# gallama

./: .coverage  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  coverage.xml  docker_initializer.py  pyproject.toml  requirements-docker.txt  requirements.txt  sonar-project.properties
.github/workflows/: python-publish.yml
.pi/skills/test/: SKILL.md
examples/: Examples_Notebook.ipynb  Examples_audio.ipynb  Examples_structured_output.ipynb  Model_Download.ipynb  streamlit_chatbot.py  test_video_using_websocket.py
examples/mcp/: .env_sample  .gitignore  README.md  server.py  server_test.py
scripts/: clean_exllamav3_env.sh  run_live_api_tests.sh  run_unit_tests.sh
src/: __init__.py  cli.py
src/gallama/: __init__.py  app.py  app_backup.py  chat_response.py  chatgenerator.py  cli.py  config_manager.py  constants.py  data_class.py  dependencies.py  dependencies_server.py  embedding.py  model.py  prompt_engine.py  request_validation.py  sampling.py  server.py  stream_parser.py  thinking_template.py  tools.py  utils.py  warmup.py
src/gallama.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gallama/api_response/: api_formatter.py  chat_response.py  model_response.py  stream_parser.py  stream_parser_v2.py
src/gallama/backend/: __init__.py  chatgenerator.py  format_enforcer.py  inference_json_lmfe_wrapper.py  model.py  prompt_engine.py  thinking_template.py  tools.py  transformers_streamer.py
src/gallama/backend/embedding/: __init__.py  embedding.py
src/gallama/backend/llm/: __init__.py  exllamav2.py  format_enforcer.py  inference_json_lmfe_wrapper.py  interface.py  json_schema_utils.py  llamacpp.py  prompt_engine.py  thinking_template.py  tools.py  transformers.py
src/gallama/backend/llm/engine/: __init__.py  base.py
src/gallama/backend/llm/engine/exllama/: __init__.py  exllamav2.py  inference_json_lmfe_wrapper.py
src/gallama/backend/llm/engine/exllamav3/: __init__.py  exllamav3.py
src/gallama/backend/llm/engine/ik_llama/: __init__.py  ik_llama.py
src/gallama/backend/llm/engine/llamacpp/: __init__.py  llamacpp.py
src/gallama/backend/llm/engine/llamacpp_server/: __init__.py  llamacpp_server.py
src/gallama/backend/llm/engine/mlx_vllm/: __init__.py  mlx_vlm.py
src/gallama/backend/llm/engine/sglang/: __init__.py  (+1 more)
src/gallama/backend/llm/prompt_engine/: model_special_tag.py  pe_custom.py  pe_transformers.py  prompt_engine.py
src/gallama/backend/model/: __init__.py  exllamav2.py  interface.py  llamacpp.py
src/gallama/backend/model_support/llama3_2_vision/: text_streamer.py
src/gallama/backend/stt/: __init__.py  asr_processor.py  audio_buffer.py  base.py  hypothesis.py  vad.py
src/gallama/backend/stt/faster_whisper/: model.py
src/gallama/backend/stt/mlx_whisper/: model.py
src/gallama/backend/tts/: TTSQueueHandler.py  __init__.py  base.py  text_processor.py
src/gallama/backend/tts/model/: README.md  __init__.py  gpt_sovits.py
src/gallama/config/: __init__.py  config_manager.py
src/gallama/conversation_store/: __init__.py  store.py
src/gallama/data/: __init__.py  default_model_list.yaml  model_config.yaml  model_token.yaml
src/gallama/data/prompt/: artifact_prompt.py
src/gallama/data/thinking_template/: tool_forced_evaluation.xml  tool_necessity_evaluation.regex  tool_necessity_evaluation.xml
src/gallama/data_classes/: __init__.py  audio_data_class.py  data_class.py  generation_data_class.py  internal_ws.py  realtime_client_proto.py  realtime_data_classes.py  realtime_server_proto.py  responses_api.py  server_dataclass.py  video.py
src/gallama/logger/: logger.py
src/gallama/model_manager/: ModelManager.py  __init__.py
src/gallama/realtime/: audio_preprocessor.py  message_queue.py  response.py  session_manager.py  vad.py  websocket_client.py  websocket_handler.py  websocket_manager.py  websocket_session.py
src/gallama/remote_mcp/: __init__.py  models.py  orchestrator.py  runtime.py
src/gallama/response_store/: __init__.py  store.py
src/gallama/routes/: __init__.py  audio.py  chat.py  embedding.py  model_management.py  ws_llm.py  ws_stt.py  ws_tts.py  ws_video.py
src/gallama/server_engine/: __init__.py  mixture_of_agents.py  model_capabilities.py  model_management.py  request_handler.py  request_routing.py  responses_ws_bridge.py  server_manager.py
src/gallama/server_routes/: __init__.py  realtime.py  realtime_backend.py  realtime_data_classes.py  responses_ws.py  server_management.py  vad.py
src/gallama/utils/: __init__.py  audio_processor_utils.py  request_disconnect.py  utils.py
src/tests/: dummy_mcp_server.py  make_server.py  test_anthropic.py  test_config_clean.py  test_openai.py  test_openai_server.py  test_responses.py  test_tool_parsers.py
tests/: README.md  SONAR_SCAN.md  bench.py  test_anthropic.py  test_anthropic_request_tools.py  test_exllamav3_defaults.py  test_experiment_mcp_search.py  test_json_schema_utils.py  test_llamacpp_server.py  test_logging_request_formatting.py  test_mcp.py  test_minimax_parser.py  test_model_capabilities.py  test_openai.py  test_request_body_encoding.py  test_request_disconnect.py  test_request_routing.py  test_responses.py  test_responses_conversations.py  test_responses_ws_bridge.py
tests/live/: shared_system_prompt.txt  test_anthropic.py  test_openai.py  test_responses.json  test_responses.py  test_responses_api.json
tests/unit/: test_anthropic_request_tools.py  test_chat_response_logging.py  test_cli_completion.py  test_default_sampling.py  test_exllamav3_defaults.py  test_experiment_mcp_search.py  test_guided_decoding_dependencies.py  test_json_schema_utils.py  test_llamacpp_server.py  test_logger_verbosity.py  test_mcp.py  test_mcp_fallback.py  test_minimax_parser.py  test_model_capabilities.py  test_model_env_config.py  test_model_response.py  test_model_status_logging.py  test_request_body_encoding.py  test_request_disconnect.py  test_request_routing.py  test_responses_conversations.py  test_responses_ws_bridge.py  test_server_run_model.py  test_sonar_reliability_regressions.py  test_tool_parsers.py  test_warmup.py
(+27 files in other folders)
