[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gallama"
version = "0.0.8"
description = "An opinionated Llama Server engine with a focus on agentic tasks"
authors = [{name = "David", email = "trantrungduc91@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/remichu-ai/gallama"

[project.scripts]
gallama = "gallama.cli:main_cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gallama*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"gallama" = ["data/*", "data/*/*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

project.dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git@c42b3223db0fc24ff9a694f19e6c78faf3ac58a1"
]


