[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gallama"
version = "0.1.4"
description = "An opinionated Llama Server engine with a focus on agentic tasks"
authors = [{name = "David", email = "trantrungduc91@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "brotli",
    "chardet",
    "colorama",
    "datamodel-code-generator",
    "fastapi",
    "httpx",
    "mcp>=1.26.0",
    "lxml",
    "packaging",
    "pillow>=10.0.0",
    "psutil",
    "pydantic",
    "pygments",
    "python-multipart",
    "pyyaml",
    "pyzmq",
    "referencing",
    "rich",
    "sse_starlette",
    "torch>=2.2.0",
    "torchvision",
    "transformers",
    "uvicorn",
    "websockets>=14.1",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
utils = [
    "huggingface-hub",
]
embedding = [
    "infinity-emb[all]",
    "sentence-transformers",
]
exl2 = [
    "exllamav2",
    "formatron>=0.4.4",
    "lm-format-enforcer",
]
exl3 = [
    "exllamav3",
    "formatron>=0.4.4",
]
llama-cpp = [
    "cmake",
    "llama-cpp-python",
    "lm-format-enforcer",
    "ninja",
]
guided-decoding-all = [
    "formatron>=0.4.4",
    "lm-format-enforcer",
]
sglang = [
    "qwen_omni_utils",
    "sglang",
]
stt = [
    "faster-whisper",
    "scipy",
    "silero-vad",
]
transformers-backend = [
    "formatron>=0.4.4",
    "qwen_omni_utils",
    "qwen_vl_utils",
]
tts = [
    "ffmpeg-python",
    "fuzzywuzzy",
    "kokoro",
    "librosa",
    "misaki",
    "misaki[en]",
    "misaki[ja]",
    "misaki[ko]",
    "misaki[zh]",
    "numpy",
    "soundfile",
    "split-lang",
]
video = [
    "livekit>=0.20.2",
    "livekit-agents>=0.12.15",
    "livekit-protocol",
    "qwen_omni_utils",
]
vllm = [
    "qwen_omni_utils",
    "vllm",
]
all = [
    "cmake",
    "exllamav2",
    "exllamav3",
    "faster-whisper",
    "ffmpeg-python",
    "formatron>=0.4.4",
    "fuzzywuzzy",
    "huggingface-hub",
    "infinity-emb[all]",
    "kokoro",
    "librosa",
    "livekit>=0.20.2",
    "livekit-agents>=0.12.15",
    "livekit-protocol",
    "llama-cpp-python",
    "lm-format-enforcer",
    "misaki",
    "misaki[en]",
    "misaki[ja]",
    "misaki[ko]",
    "misaki[zh]",
    "ninja",
    "numpy",
    "pytest",
    "qwen_omni_utils",
    "qwen_vl_utils",
    "scipy",
    "sentence-transformers",
    "sglang",
    "silero-vad",
    "soundfile",
    "split-lang",
    "vllm",
]

[project.urls]
"Homepage" = "https://github.com/remichu-ai/gallama"

[project.scripts]
gallama = "gallama.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gallama*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"gallama" = ["data/*", "data/*/*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
